# ngx-tickle

./: .envrc  .envrc.local.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl.md  build.rs  flake.nix
.github/workflows/: docs.yml  readme.yml
examples/: Cargo.toml  build.rs  compat.rs  sidecar.rs  yielding.rs
examples/prefix/: .gitignore
examples/prefix/conf/: nginx.conf
examples/prefix/modules/: libcompat.debug.dylib  libcompat.release.dylib  libsidecar.debug.dylib  libsidecar.release.dylib  libyielding.debug.dylib  libyielding.release.dylib
src/: finalize.rs  lib.rs  prelude.rs  spawn.rs
src/ffi/: expand.c
src/notify/: eventfd.rs  mod.rs  selfpipe.rs
xtask/: Cargo.toml
xtask/src/: main.rs
