[workspace]
members = [
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pschyska/ngx-tickle"

[package]
name = "ngx-tickle"
description = "tools for async nginx modules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
autoexamples = false

[dependencies]
async-task = "4.7"
crossbeam-channel = "0.5"
nginx-sys = "0.5"
ngx = "0.5"
libc = "0.2"

[build-dependencies]
cc = "1.2"

[features]
default = ["vendored"]
vendored = ["ngx/vendored"]
selfpipe = []
