[package]

name = "examples"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[dependencies]
ngx-tickle = { path = ".." }
futures = "0.3"
nginx-sys = "0.5"
ngx = "0.5"
tokio = { version="1.48", features = ["rt-multi-thread", "time", "fs"] }

[build-dependencies]
anyhow = "1.0"
cargo_metadata = "0.23"

[[example]]
name = "sidecar"
path = "sidecar.rs"
crate-type = ["cdylib"]
