[package]

name = "examples"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[dependencies]
ngx-tickle = { path = ".." }
ngx = { version = "*", features = ["vendored"]}
futures = "0.3"
futures-util = "0.3"
nginx-sys = "0.5"
tokio = { version="1.49", features = ["rt-multi-thread", "time", "fs", "io-util"] }
anyhow = "1.0"
async-compat = "0.2"
reqwest = "0.13"

[build-dependencies]
anyhow = "1.0"
cargo_metadata = "0.23"

[features]
selfpipe = ["ngx-tickle/selfpipe"]

[[example]]
name = "sidecar"
path = "sidecar.rs"
crate-type = ["cdylib"]

[[example]]
name = "yielding"
path = "yielding.rs"
crate-type = ["cdylib"]

[[example]]
name = "compat"
path = "compat.rs"
crate-type = ["cdylib"]
